# past-beggars

./: .gitignore  README.md  pyproject.toml
aic51/cli/: __main__.py
aic51/cli/commands/: __init__.py  add.py  analyse.py  command.py  index.py  init.py  serve.py  validate.py
aic51/layout/: config.yaml
aic51/resources/: __init__.py  file_paths.py
aic51/resources/layout/: config.yaml
aic51/resources/milvus-standalone/: milvus-standalone-docker-compose.yaml
script/: download_data.sh  url.txt
