[build-system]
requires = ["setuptools>=73.0.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aic51"
version = "2.0.1"
requires-python = ">= 3.10"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dependencies = [
  "rich",
  "torch", 
  "torchvision",
  "numpy==1.26.4",
  "transformers",
  "python-dotenv",
  "pyyaml",
  "opencv-python",
  "pillow",
  "pymilvus>=2.6.0",
  "fastapi",
  "uvicorn",
  "sentencepiece",
  "jupyter",
  "open_clip_torch",
  "pytesseract",
  "apscheduler"
]

[project.scripts]
aic51-cli = "aic51.cli:__main__.main"

[tool.setuptools]
packages = [
  "aic51",
]
